fixed image not showing problem

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   background-color:grey;
   border-radius: 0.0rem;
 
-  background-image: url('/Users/xin/makeSchool/spd 1.2/sprint3/marvin-meyer-SYTO3xs06fU-unsplash.jpg');
+  background-image: url('marvin-meyer-SYTO3xs06fU-unsplash.jpg');
   background-size : cover;
   background-repeat: no-repeat;
 }
